--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 A Simple test with Node.js
+------------------------------------
+
+
+1 - Modules
+-----------
+- cluster
+- supervisor
+- underscore 
+	- http://documentcloud.github.com/underscore/
+
+
+
+
